# notify2

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/: api.md  cli.md  configuration.md  index.md  troubleshooting.md
examples/: basic_usage.py  realistic_usage.py
src/notify2/: __init__.py  cli.py  config.py  core.py  exceptions.py
tests/: __init__.py  test_cli.py  test_config.py  test_core.py
